[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "Repository for useful code implementations."
authors = ["Andrei Valdez <andreivaldezau@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
